fix(horizontal-masonry-layout): bigger text on mobile

--- a/static/global.css
+++ b/static/global.css
@@ -11,8 +11,8 @@
 body {
   font-family: 'Work Sans', sans-serif;
   font-weight: 300;
-  font-size: calc(12px + 0.35vw); /* Responsive base font size */
-  line-height: calc(12px + 1.05vw); /* Responsive Vertical Rhythm */
+  font-size: calc(12px + 0.55vw); /* Responsive base font size */
+  line-height: calc(12px + 1.55vw); /* Responsive Vertical Rhythm */
   margin: 0;
   color: #333;
 }
@@ -26,12 +26,12 @@ body {
 h1 {
   font-weight: 400;
   font-size: 2.197em;
-  line-height: calc(18px + 1.8vw); /* Responsive Vertical Rhythm */
+  line-height: calc(18px + 2.8vw); /* Responsive Vertical Rhythm */
 }
 
 h2 {
   font-size: 1.961em;
-  line-height: calc(18px + 1vw); /* Responsive Vertical Rhythm */
+  line-height: calc(18px + 2.25vw); /* Responsive Vertical Rhythm */
 }
 
 h3 {
